First final version 1.0

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <title>PresupuestoApp</title>
   <base href="/">
 
-  <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
-
+  
+  <script src="https://code.iconify.design/iconify-icon/1.0.0-beta.3/iconify-icon.min.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
